# examples

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  fission.toml
crates/tiktok/: Cargo.toml  (+3 more)
crates/tiktok-fission/: Cargo.toml  README.md  fission.toml
crates/tiktok-fission/android-activity-patch/src/native_activity/: glue.rs
crates/tiktok-fission/assets/theme/: dsp.json  tokens.json
crates/tiktok-fission/src/: app.rs  data.rs  lib.rs  main.rs  state.rs  ui_helpers.rs
crates/tiktok-fission/src/assets/: data.json
crates/tiktok-fission/src/screens/: create.rs  discover.rs  feed.rs  inbox.rs  mod.rs  profile.rs
crates/tiktok-fission/src/widgets/: action_sidebar.rs  bottom_nav.rs  mod.rs  music_ticker.rs  rotating_disc.rs  video_info.rs  video_item.rs
crates/uber/: Cargo.toml
crates/uber/src/: lib.rs
crates/uber/src/admin/: app.rs
crates/uber/src/admin/screens/: dashboard.rs  drivers.rs  login.rs  mod.rs  trips.rs  users.rs
crates/uber/src/driver/: app.rs
crates/uber/src/driver/screens/: active_trip.rs  earnings.rs  home.rs  mod.rs  profile.rs  ride_requests.rs  splash.rs
crates/uber/src/rider/: app.rs
crates/uber/src/rider/screens/: become_driver.rs  home.rs  mod.rs  payment.rs  profile.rs  ride_request.rs  search.rs  splash.rs  trip_history.rs  trip_tracking.rs
crates/uber/src/rider/widgets/: fare_input.rs  map_view.rs  mod.rs
crates/uber/src/shared/: mod.rs  state.rs
crates/uber/src/shared/actions/: auth.rs  location.rs  navigation.rs  ride.rs  search.rs  trip.rs
crates/uber/src/shared/effects/: auth.rs  firestore.rs  maps.rs  mod.rs
crates/uber/src/shared/models/: direction.rs  document.rs  driver.rs  location.rs  mod.rs  payment.rs  place.rs  ride.rs  trip.rs  user.rs  vehicle.rs
crates/uber/src/shared/reducers/: auth.rs  location.rs  mod.rs  navigation.rs  ride.rs  search.rs  trip.rs
(+56 files in other folders)
