[workspace]
members = [
    "crates/*"
]
exclude = [
    "crates/uber/assets"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Fission Team"]
license = "MIT"

[workspace.dependencies]
fission = { git = "https://github.com/worka-ai/fission.git", default-features = false, features = ["desktop", "ios"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
url = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
