[package]
name = "uber"
version.workspace = true
edition.workspace = true

[lib]
name = "uber"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rider"
path = "src/bin/rider.rs"

[[bin]]
name = "driver"
path = "src/bin/driver.rs"

[[bin]]
name = "admin"
path = "src/bin/admin.rs"

[dependencies]
fission.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
url.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
uuid.workspace = true
chrono.workspace = true
google_maps = "3.9.6"
